# wisc_ecephys_tools

./: .gitignore  AGENTS.md  README.md  channel_groups_template.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
ecephys_analyses/: __init__.py  channels.py  channels.yaml  experiments_and_aliases.py  load.py  load_shy.py  package_data.py  params.py  paths.py  paths.yaml  paths_new.yaml  projects.py  session_org_utils.py  sglx_sessions.py  utils.py  version.py
ecephys_analyses/archive/: old_paths.yaml
ecephys_analyses/config/: analysis_cfg.yaml  sglx_experiments.yaml  sglx_sessions.yaml
ecephys_analyses/data/: analysis_parameters.yml  analysis_paths.yaml  channel_groups.py  channels.yaml  conditions.yml  datapaths.yaml  datapaths.yml  example_org_spec.yaml  load.py  median-bandpower.csv  noise_contaminated.yml  old_paths.yaml  parameters.py  paths.py  recording_sessions.yaml  regions.yml  roots.yml  sessions.yaml  sglx_sessions.yaml  utils.py
ecephys_analyses/load/: __init__.py  hypnograms.py  load.py
ecephys_analyses/on_off/: on_off.py  subregion_utils.py
ecephys_analyses/package_data/: analysis_cfg.yaml  channels.yaml  conditions.yml  (+6 more)
ecephys_project_manager/: __init__.py  conf.py  depths.py  io.py  params.py  projects.py  regions.py  version.py
ephyviewer-env/: README.md  launch.py  launch.sh  launch_raster.py  launch_raster.sh  pyproject.toml
legacy_setuptools/: setup.py  version.py
notebooks/: CA1-drift-tracking.ipynb  CSD-based-SR-localization-by-state.ipynb  Untitled.ipynb  classify-extended-wake.ipynb  dev.ipynb  emg-from-lfp.ipynb  generate-CSD-reports-for-manual-drift-tracking.ipynb  generate-PSD-reports-for-manual-drift-tracking.ipynb  generate-empty-sr_chans-files.ipynb  generate_structure_summary.ipynb  get-bandpower.ipynb  move_stuff_around.ipynb  multifile-load.ipynb  multifile_load.ipynb  plot_consolidated_states.ipynb  session_locations.ipynb  state-spectra.ipynb  structures.ipynb  tdt_xarray.ipynb
scripts/: README.md  load_experiment_subject_file.py  load_multiprobe_sorting.py  load_singleprobe_sorting.py  pane_per_probe.py  pane_per_structure.py  run_mu_spindles_detection.py  run_off_detection.py  run_spatial_off_detection.py
wisc_ecephys_tools/: __init__.py  channels.py  cluster_groups.py  conf.py  deprecated.py  depths.py  hg.py  io.py  params.py  projects.py  shared.py  subjects.py  utils.py  version.py
(+387 files in other folders)
