[tool.poetry]
name = "wisc_ecephys_tools"
version = "0.1.0"
description = "\"Private/internal tools specific to the Wisconsin Institute for Sleep and Consciousness (WISC)\""
authors = ["Graham Findlay <gfindlay@wisc.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
# ecephys = {path = "../ecephys", develop = true}
# spikeinterface = {path = "../spikeinterface", develop = true}
# spikeinterface = {git = "https://github.com/CSC-UW/spikeinterface.git", rev = "wisc/dev"}
black = "^22.6.0"
PyYAML = "^6.0"
numpy = "^1.18"
horology = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
