[tool.poetry]
name = "wisc_ecephys_tools"
version = "0.1.0"
description = "\"Private/internal tools specific to the Wisconsin Institute for Sleep and Consciousness (WISC)\""
authors = ["Graham Findlay <gfindlay@wisc.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
