[project]
name = "wisc-ecephys-tools"
version = "0.1.1"
authors = [
  { name="Graham Findlay", email="gfindlay@wisc.edu" }
]
description = "Private internal tools specific to the Wisconsin Institute for Sleep and Consciousness (WISC)"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "brainglobe-atlasapi",
    "altair",
    "thefuzz",
    "ecephys",
]

[dependency-groups]
dev = [
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.uv.sources]
ecephys = { git = "https://github.com/CSC-UW/ecephys.git", branch = "develop" }